objects/VisitOps__Supplier__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__AveragePricePerPerson__c</fullName>
        <description>This field is related to Restaurant Supplier type</description>
        <label>Average Price/person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__CompanyRate__c</fullName>
        <description>This field is related to Hotels, Ground Transportation Supplier type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Confidentiality_Agreement__c</fullName>
        <label>Confidentiality Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Cuisine__c</fullName>
        <description>This field is related to Restaurant Supplier type</description>
        <label>Cuisine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>European</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Mediterranean</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Middle-Eastern</fullName>
                </value>
                <value>
                    <fullName>North American</fullName>
                </value>
                <value>
                    <fullName>Oceanian</fullName>
                </value>
                <value>
                    <fullName>South American</fullName>
                </value>
                <value>
                    <fullName>Sushi</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Distance_from_Location_Miles__c</fullName>
        <description>This field is related to Restaurant, Hotel Supplier type</description>
        <label>Distance from Location (Miles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__HotelType__c</fullName>
        <description>This field is related to Hotel Supplier type</description>
        <label>Hotel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Master_Services_Agreement__c</fullName>
        <label>Master Services Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Primary_Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Primary_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Primary_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__RestaurantType__c</fullName>
        <description>This field is related to Restaurant Supplier type</description>
        <label>Restaurant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National Chain</fullName>
                </value>
                <value>
                    <fullName>Local Restaurant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supplier Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supplier Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier_Type__c</fullName>
        <label>Supplier Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Signage</fullName>
                </value>
                <value>
                    <fullName>Ground Transportation</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Photographer</fullName>
                </value>
                <value>
                    <fullName>Videographer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier_Web_Site__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supplier Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__VehicleTypes__c</fullName>
        <description>This field is related to Ground Transportation Supplier type</description>
        <label>Vehicle Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mid-sized Cars</fullName>
                </value>
                <value>
                    <fullName>Large Cars</fullName>
                </value>
                <value>
                    <fullName>Sports Cars</fullName>
                </value>
                <value>
                    <fullName>Vans</fullName>
                </value>
                <value>
                    <fullName>Limosines</fullName>
                </value>
                <value>
                    <fullName>Buses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>VisitOps__Supplier_Type__c</columns>
        <columns>VisitOps__Provider_Name__c</columns>
        <columns>VisitOps__Provider_Phone__c</columns>
        <columns>VisitOps__Provider_Email__c</columns>
        <columns>VisitOps__Provider_Address__c</columns>
        <columns>VisitOps__Provider_Website__c</columns>
        <columns>VisitOps__Distance_from_Location_Miles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP{0000}</displayFormat>
        <label>Supplier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisitOps__Supplier_Type_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(VisitOps__Supplier_Type__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>VisitOps__Supplier_Type__c</errorDisplayField>
        <errorMessage>Supplier Type is mandatory for Supplier</errorMessage>
    </validationRules>
</CustomObject>